# mfp-core

./: CMakeLists.txt  head_node.py  motor_node.py  package.xml  readme.md
launch/: bringup-arm-control-diff.launch  bringup-arm-control-mecanum.launch  bringup-arm-control.launch  bringup-diff.launch  bringup.launch
src/: arm_control.py  arm_node.py  diff_motor.py  hand_control.py  head_node.py  ina260_power_node.py  ina3221_listener.py  ina3221_power_node.py  mecanum_motor_node.py  mechanum_motor_node.py  motor_node.py  pos_listener.py  power_node.py
