<?xml version="1.0"?>
<package format="2">
  <name>mfp-core</name>
  <version>0.0.0</version>
  <description>The mfp-core package</description>

  <maintainer email="keegan@neave.engineering">Keegan Neave</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/neaveeng</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_redboard</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_redboard</exec_depend>


  <export>
  </export>
</package>
